fifth and sixth section added, README corrected

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -141,6 +141,52 @@
                     </div>
                 </form>
             </section>
+            <section>
+                <h1>
+                    History of the business
+                </h1>
+                <p>
+                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.
+                </p>
+                <h2>
+                    Something else
+                </h2>
+                <p>
+                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.
+                </p>
+            </section>
+            <section>
+                <h1>
+                    Our products         
+                </h1>
+                <ol>
+                    <li>Features</li>       
+                    <li>Dowloads</li>
+                    <li>Intergrations</li>
+                    <li>Ads on</li>
+                </ol>   
+                <h1>
+                    Business
+                </h1>
+                <ol>
+                    <li>About us</li>
+                    <li>Clients</li>
+                    <li>Resources</li>
+                    <li>Blog</li>
+                </ol>
+                <h1>
+                    Support
+                </h1>
+                <ol>
+                    <li>Help</li>
+                    <li>Tutorials</li>
+                    <li>API</li>
+                    <li>Contact</li>
+                </ol>
+            </section>
         </main>
+        <footer>
+            
+        </footer>
     </body>
 </html>
