--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -8,6 +8,21 @@
             <p>
                 <b>Trackgenix</b> by GigaTech Software Solutions SA
             </p>
+            <a href="http://www.facebook.com">
+                <img src="assets/facebook_icon.png" alt="Facebook" style="width:35px ;height:35px;">
+            </a>
+            <a href="http://www.instagram.com">
+                <img src="assets/instagram_icon.png" alt="Instagram" style="width:35px ;height:35px;">
+            </a>
+            <a href="http://www.twitter.com">
+                <img src="assets/twitter_icon.png" alt="Twitter" style="width:35px ;height:35px;">
+            </a>
+            <a href="http://www.github.com">
+                <img src="assets/github_icon.png" alt="GitHub" style="width:35px ;height:35px;">
+            </a>
+            <a href="http://www.linkedin.com">
+                <img src="assets/linkedin_icon.png" alt="LinkedIn" style="width:35px ;height:35px;">
+            </a>
         </header>
         <aside>
 
@@ -160,33 +175,47 @@
                     Our products         
                 </h1>
                 <ol>
-                    <li>Features</li>       
-                    <li>Dowloads</li>
-                    <li>Intergrations</li>
-                    <li>Ads on</li>
+                    <li><a href="">Features</a></li>       
+                    <li><a href="">Dowloads</a></li>
+                    <li><a href="">Intergrations</a></li>
+                    <li><a href="">Ads on</a></li>
                 </ol>   
                 <h1>
                     Business
                 </h1>
                 <ol>
-                    <li>About us</li>
-                    <li>Clients</li>
-                    <li>Resources</li>
-                    <li>Blog</li>
+                    <li><a href="">About us</a></li>
+                    <li><a href="">Clients</a></li>
+                    <li><a href="">Resources</a></li>
+                    <li><a href="">Blog</a></li>
                 </ol>
                 <h1>
                     Support
                 </h1>
                 <ol>
-                    <li>Help</li>
-                    <li>Tutorials</li>
-                    <li>API</li>
-                    <li>Contact</li>
+                    <li><a href="">Help</a></li>
+                    <li><a href="">Tutorials</a></li>
+                    <li><a href="">API</a></li>
+                    <li><a href="">Contact</a></li>
                 </ol>
             </section>
         </main>
         <footer>
-            
+            <a href="http://www.facebook.com">
+                <img src="assets/facebook_icon.png" alt="Facebook" style="width:35px ;height:35px;">
+            </a>
+            <a href="http://www.instagram.com">
+                <img src="assets/instagram_icon.png" alt="Instagram" style="width:35px ;height:35px;">
+            </a>
+            <a href="http://www.twitter.com">
+                <img src="assets/twitter_icon.png" alt="Twitter" style="width:35px ;height:35px;">
+            </a>
+            <a href="http://www.github.com">
+                <img src="assets/github_icon.png" alt="GitHub" style="width:35px ;height:35px;">
+            </a>
+            <a href="http://www.linkedin.com">
+                <img src="assets/linkedin_icon.png" alt="LinkedIn" style="width:35px ;height:35px;">
+            </a>
         </footer>
     </body>
 </html>
