html structure corrected

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -27,30 +27,42 @@
             </div>
         </header>
         <aside>
-            <h1>Menu</h1>
             <div>
-                <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">SignUp</a></li>
-                    <li><a href="">LogIn</a></li>
-                </ul>
+                <h1>Menu</h1>
+                <div>
+                    <ul>
+                        <li>
+                            <a href="index.html">Home</a>
+                        </li>
+                        <li>
+                            <a href="">SignUp</a>
+                        </li>
+                        <li>
+                            <a href="">LogIn</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-            <h1>Get in touch</h1>
-            <p>
-                Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.
-            </p>
-            <p>
-                <img src="assets/email_icon.png" alt="Email" style="width:25px; height:25px;">
-                infotrackgenix@something.idk
-            </p>
-            <p>
-                <img src="assets/house_icon.png" alt="Address" style="width:25px; height:25px;">
-                1234 Somewhere Road #8254, Nashville, TN 00000-0000
-            </p>
-            <p>
-                <img src="assets/phone_icon.png" alt="Phone" style="width:25px; height:25px;">
-                (000)000-0000
-            </p>
+            <div>
+                <h1>Get in touch</h1>
+                <p>
+                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.
+                </p>
+                <div>
+                    <p>
+                        <img src="assets/email_icon.png" alt="Email" style="width:25px; height:25px;">
+                        infotrackgenix@something.idk
+                    </p>
+                    <p>
+                        <img src="assets/house_icon.png" alt="Address" style="width:25px; height:25px;">
+                        1234 Somewhere Road #8254, Nashville, TN 00000-0000
+                    </p>
+                    <p>
+                        <img src="assets/phone_icon.png" alt="Phone" style="width:25px; height:25px;">
+                        (000)000-0000
+                    </p>
+                </div>
+            </div>
         </aside>
         <main>
             <section>
@@ -73,7 +85,7 @@
                 <h2>
                     Why you should use me
                 </h2>
-                <section>
+                <div>
                     <h3>
                         Productivity booster
                     </h3>
@@ -81,8 +93,8 @@
                         <img src="assets/productivity-booster.png" alt="Image" style="width:50px ;height:50px ;">
                         Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.
                     </p>
-                </section>
-                <section>
+                </div>
+                <div>
                     <h3>
                         Work traceability
                     </h3>
@@ -90,8 +102,8 @@
                         <img src="assets/work-traceability.png" alt="Image" style="width:50px ;height:50px ;">
                         Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously. 
                     </p>
-                </section>
-                <section>
+                </div>
+                <div>
                     <h3>
                         Leadership and team management
                     </h3>
@@ -99,8 +111,8 @@
                         <img src="assets/leadership.png" alt="Image" style="width:50px ;height:50px ;">
                         Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously. 
                     </p>
-                </section>
-                <section>
+                </div>
+                <div>
                     <h3>
                         Decision making
                     </h3>
@@ -108,13 +120,13 @@
                         <img src="assets/decision-making.png" alt="Image" style="width:50px ;height:50px ;">
                         Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously. 
                     </p>
-                </section>
+                </div>
             </section>
             <section>
                 <h2>
                     Features
                 </h2>
-                <section>
+                <div>
                     <h3>
                         Hours log
                     </h3>
@@ -125,8 +137,8 @@
                     <button>
                         MORE    
                     </button>
-                </section>
-                <section>
+                </div>
+                <div>
                     <h3>
                         Reports
                     </h3>
@@ -137,8 +149,8 @@
                     <button>
                         MORE    
                     </button>
-                </section>
-                <section>
+                </div>
+                <div>
                     <h3>
                         Resourse managment
                     </h3>
@@ -149,8 +161,8 @@
                     <button>
                         MORE
                     </button>
-                </section>
-                <section>
+                </div>
+                <div>
                     <h3>
                         Multiple Roles
                     </h3>
@@ -161,7 +173,7 @@
                     <button>
                         MORE    
                     </button>
-                </section>
+                </div>
             </section>
             <section>
                 <h2>
@@ -200,38 +212,70 @@
                 <h3>
                     Something else
                 </h3>
+                <img src="assets/something-else-1.png" alt="Image">
                 <p>
                     Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.
                 </p>
+                <img src="assets/something-else-2.png" alt="Image">
             </section>
             <section>
-                <h2>
-                    Our products         
-                </h2>
-                <ol>
-                    <li><a href="">Features</a></li>       
-                    <li><a href="">Dowloads</a></li>
-                    <li><a href="">Intergrations</a></li>
-                    <li><a href="">Ads on</a></li>
-                </ol>   
-                <h2>
-                    Business
-                </h2>
-                <ol>
-                    <li><a href="">About us</a></li>
-                    <li><a href="">Clients</a></li>
-                    <li><a href="">Resources</a></li>
-                    <li><a href="">Blog</a></li>
-                </ol>
-                <h2>
-                    Support
-                </h2>
-                <ol>
-                    <li><a href="">Help</a></li>
-                    <li><a href="">Tutorials</a></li>
-                    <li><a href="">API</a></li>
-                    <li><a href="">Contact</a></li>
-                </ol>
+                <div>
+                    <h2>
+                        Our products         
+                    </h2>
+                    <ol>
+                        <li>
+                            <a href="">Features</a>
+                        </li>       
+                        <li>
+                            <a href="">Dowloads</a>
+                        </li>
+                        <li>
+                            <a href="">Intergrations</a>
+                        </li>
+                        <li>
+                            <a href="">Ads on</a>
+                        </li>
+                    </ol>
+                </div>
+                <div>   
+                    <h2>
+                        Business
+                    </h2>
+                    <ol>
+                        <li>
+                            <a href="">About us</a>
+                        </li>
+                        <li>
+                            <a href="">Clients</a>
+                        </li>
+                        <li>
+                            <a href="">Resources</a>
+                        </li>
+                        <li>
+                            <a href="">Blog</a>
+                        </li>
+                    </ol>
+                </div>
+                <div>
+                    <h2>
+                        Support
+                    </h2>
+                    <ol>
+                        <li>
+                            <a href="">Help</a>
+                        </li>
+                        <li>
+                            <a href="">Tutorials</a>
+                        </li>
+                        <li>
+                            <a href="">API</a>
+                        </li>
+                        <li>
+                            <a href="">Contact</a>
+                        </li>
+                    </ol>
+                </div>
             </section>
         </main>
         <footer>
