last minute changes

--- a/Semana-01/index.html
+++ b/Semana-01/index.html
@@ -201,6 +201,12 @@
                         <input type="textarea" placeholder="Message">
                     </div>
                 </form>
+                <button>
+                    Reset    
+                </button>
+                <button>
+                    Send    
+                </button>
             </section>
             <section>
                 <h2>
