BaSP-W02-2022:html file corrected, reset.css added

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Trackgenix</title>
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <header>
@@ -10,25 +15,25 @@
             </p>
             <div>
                 <a href="http://www.facebook.com">
-                    <img src="assets/facebook_icon.png" alt="Facebook" style="width:35px ;height:35px;">
+                    <img src="assets/facebook_icon.png" alt="Facebook" width="35px" height="35px">
                 </a>
                 <a href="http://www.instagram.com">
-                    <img src="assets/instagram_icon.png" alt="Instagram" style="width:35px ;height:35px;">
+                    <img src="assets/instagram_icon.png" alt="Instagram" width="35px" height="35px">
                 </a>
                 <a href="http://www.twitter.com">
-                    <img src="assets/twitter_icon.png" alt="Twitter" style="width:35px ;height:35px;">
+                    <img src="assets/twitter_icon.png" alt="Twitter" width="35px" height="35px";">
                 </a>
                 <a href="http://www.github.com">
-                    <img src="assets/github_icon.png" alt="GitHub" style="width:35px ;height:35px;">
+                    <img src="assets/github_icon.png" alt="GitHub" width="35px" height="35px">
                 </a>
                 <a href="http://www.linkedin.com">
-                    <img src="assets/linkedin_icon.png" alt="LinkedIn" style="width:35px ;height:35px;">
+                    <img src="assets/linkedin_icon.png" alt="LinkedIn" width="35px" height="35px">
                 </a>
             </div>
         </header>
         <aside>
             <div>
-                <h1>Menu</h1>
+                <h2>Menu</h2>
                 <div>
                     <ul>
                         <li>
@@ -44,21 +49,22 @@
                 </div>
             </div>
             <div>
-                <h1>Get in touch</h1>
+                <h2>Get in touch</h2>
                 <p>
-                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.
+                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                     Don't take this text seriously.
                 </p>
                 <div>
                     <p>
-                        <img src="assets/email_icon.png" alt="Email" style="width:25px; height:25px;">
+                        <img src="assets/email_icon.png" alt="Email" width="25px" height="25px">
                         infotrackgenix@something.idk
                     </p>
                     <p>
-                        <img src="assets/house_icon.png" alt="Address" style="width:25px; height:25px;">
+                        <img src="assets/house_icon.png" alt="Address" width="25px" height="25px">
                         1234 Somewhere Road #8254, Nashville, TN 00000-0000
                     </p>
                     <p>
-                        <img src="assets/phone_icon.png" alt="Phone" style="width:25px; height:25px;">
+                        <img src="assets/phone_icon.png" alt="Phone" width="25px" height="25px">
                         (000)000-0000
                     </p>
                 </div>
@@ -75,7 +81,8 @@
                 </h2>
                 <img src="assets/header.png" alt="Image">
                 <p>
-                    Trackgenix is a web system that facilitates the registration of hours worked by each employee in each project and work team.
+                    Trackgenix is a web system that facilitates the registration of hours worked by each employee in each project and work
+                     team.
                 </p>
                 <button>
                     MORE
@@ -90,8 +97,9 @@
                         Productivity booster
                     </h3>
                     <p>
-                        <img src="assets/productivity-booster.png" alt="Image" style="width:50px ;height:50px ;">
-                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.
+                        <img src="assets/productivity-booster.png" alt="Image" width="50px" height="50px">
+                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                         Don't take this text seriously.
                     </p>
                 </div>
                 <div>
@@ -99,8 +107,9 @@
                         Work traceability
                     </h3>
                     <p>
-                        <img src="assets/work-traceability.png" alt="Image" style="width:50px ;height:50px ;">
-                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously. 
+                        <img src="assets/work-traceability.png" alt="Image" width="50px" height="50px">
+                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                         Don't take this text seriously.
                     </p>
                 </div>
                 <div>
@@ -108,8 +117,9 @@
                         Leadership and team management
                     </h3>
                     <p>
-                        <img src="assets/leadership.png" alt="Image" style="width:50px ;height:50px ;">
-                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously. 
+                        <img src="assets/leadership.png" alt="Image" width="50px" height="50px">
+                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                         Don't take this text seriously.
                     </p>
                 </div>
                 <div>
@@ -117,8 +127,9 @@
                         Decision making
                     </h3>
                     <p>
-                        <img src="assets/decision-making.png" alt="Image" style="width:50px ;height:50px ;">
-                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously. 
+                        <img src="assets/decision-making.png" alt="Image" width="50px" height="50px">
+                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                         Don't take this text seriously.
                     </p>
                 </div>
             </section>
@@ -132,10 +143,11 @@
                     </h3>
                     <img src="assets/hours-log.png" alt="Image">
                     <p>
-                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.         
+                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                         Don't take this text seriously.
                     </p>
                     <button>
-                        MORE    
+                        MORE
                     </button>
                 </div>
                 <div>
@@ -144,10 +156,11 @@
                     </h3>
                     <img src="assets/reports.png" alt="Image">
                     <p>
-                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.         
+                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                         Don't take this text seriously.
                     </p>
                     <button>
-                        MORE    
+                        MORE
                     </button>
                 </div>
                 <div>
@@ -156,7 +169,8 @@
                     </h3>
                     <img src="assets/resource-management.png">
                     <p>
-                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.         
+                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                         Don't take this text seriously.
                     </p>
                     <button>
                         MORE
@@ -168,10 +182,11 @@
                     </h3>
                     <img src="assets/multiple-roles.png" alt="Image">
                     <p>
-                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.         
+                        Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                         Don't take this text seriously.
                     </p>
                     <button>
-                        MORE    
+                        MORE
                     </button>
                 </div>
             </section>
@@ -202,10 +217,10 @@
                     </div>
                 </form>
                 <button>
-                    Reset    
+                    Reset
                 </button>
                 <button>
-                    Send    
+                    Send
                 </button>
             </section>
             <section>
@@ -213,34 +228,36 @@
                     History of the business
                 </h2>
                 <p>
-                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.
+                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                     Don't take this text seriously.
                 </p>
                 <h3>
                     Something else
                 </h3>
                 <img src="assets/something-else-1.png" alt="Image">
                 <p>
-                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example. Don't take this text seriously.
+                    Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
+                     Don't take this text seriously.
                 </p>
                 <img src="assets/something-else-2.png" alt="Image">
             </section>
             <section>
                 <div>
                     <h2>
-                        Our products         
+                        Our products
                     </h2>
                     <ol>
                         <li>
                             <a href="">Features</a>
                         </li>       
                         <li>
-                            <a href="">Dowloads</a>
+                            <a href="">Downloads</a>
                         </li>
                         <li>
-                            <a href="">Intergrations</a>
+                            <a href="">Integrations</a>
                         </li>
                         <li>
-                            <a href="">Ads on</a>
+                            <a href="">Add-ons</a>
                         </li>
                     </ol>
                 </div>
@@ -287,19 +304,19 @@
         <footer>
             <div>
                 <a href="http://www.facebook.com">
-                    <img src="assets/facebook_icon.png" alt="Facebook" style="width:35px ;height:35px;">
+                    <img src="assets/facebook_icon.png" alt="Facebook" width="35px" height="35px">
                 </a>
                 <a href="http://www.instagram.com">
-                    <img src="assets/instagram_icon.png" alt="Instagram" style="width:35px ;height:35px;">
+                    <img src="assets/instagram_icon.png" alt="Instagram" width="35px" height="35px">
                 </a>
                 <a href="http://www.twitter.com">
-                    <img src="assets/twitter_icon.png" alt="Twitter" style="width:35px ;height:35px;">
+                    <img src="assets/twitter_icon.png" alt="Twitter" width="35px" height="35px">
                 </a>
                 <a href="http://www.github.com">
-                    <img src="assets/github_icon.png" alt="GitHub" style="width:35px ;height:35px;">
+                    <img src="assets/github_icon.png" alt="GitHub" width="35px" height="35px">
                 </a>
                 <a href="http://www.linkedin.com">
-                    <img src="assets/linkedin_icon.png" alt="LinkedIn" style="width:35px ;height:35px;">
+                    <img src="assets/linkedin_icon.png" alt="LinkedIn" width="35px" height="35px">
                 </a>
             </div>
             <p>
