BaSP-W02-2022:footer alignment and botton interaction added, header in progress

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -13,7 +13,7 @@
             <p>
                 Trackgenix by GigaTech Software Solutions SA
             </p>
-            <div>
+            <nav>
                 <a href="http://www.facebook.com">
                     <img src="assets/facebook_icon.png" alt="Facebook" width="35px" height="35px">
                 </a>
@@ -21,7 +21,7 @@
                     <img src="assets/instagram_icon.png" alt="Instagram" width="35px" height="35px">
                 </a>
                 <a href="http://www.twitter.com">
-                    <img src="assets/twitter_icon.png" alt="Twitter" width="35px" height="35px";">
+                    <img src="assets/twitter_icon.png" alt="Twitter" width="35px" height="35px">
                 </a>
                 <a href="http://www.github.com">
                     <img src="assets/github_icon.png" alt="GitHub" width="35px" height="35px">
@@ -29,12 +29,12 @@
                 <a href="http://www.linkedin.com">
                     <img src="assets/linkedin_icon.png" alt="LinkedIn" width="35px" height="35px">
                 </a>
-            </div>
+            </nav>
         </header>
         <aside>
             <div>
                 <h2>Menu</h2>
-                <div>
+                <nav>
                     <ul>
                         <li>
                             <a href="index.html">Home</a>
@@ -46,7 +46,7 @@
                             <a href="">LogIn</a>
                         </li>
                     </ul>
-                </div>
+                </nav>
             </div>
             <div>
                 <h2>Get in touch</h2>
@@ -92,7 +92,7 @@
                 <h2>
                     Why you should use me
                 </h2>
-                <div>
+                <article>
                     <h3>
                         Productivity booster
                     </h3>
@@ -101,8 +101,8 @@
                         Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
                          Don't take this text seriously.
                     </p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <h3>
                         Work traceability
                     </h3>
@@ -111,8 +111,8 @@
                         Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
                          Don't take this text seriously.
                     </p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <h3>
                         Leadership and team management
                     </h3>
@@ -121,8 +121,8 @@
                         Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
                          Don't take this text seriously.
                     </p>
-                </div>
-                <div>
+                </article>
+                <article>
                     <h3>
                         Decision making
                     </h3>
@@ -131,7 +131,7 @@
                         Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
                          Don't take this text seriously.
                     </p>
-                </div>
+                </article>
             </section>
             <section>
                 <h2>
@@ -302,7 +302,7 @@
             </section>
         </main>
         <footer>
-            <div>
+            <nav>
                 <a href="http://www.facebook.com">
                     <img src="assets/facebook_icon.png" alt="Facebook" width="35px" height="35px">
                 </a>
@@ -318,7 +318,7 @@
                 <a href="http://www.linkedin.com">
                     <img src="assets/linkedin_icon.png" alt="LinkedIn" width="35px" height="35px">
                 </a>
-            </div>
+            </nav>
             <p>
                 Copyright © 2022 GigaTech Software Solutions SA. All rights reserved.
             </p>
