BaSP-W01-2022:header and sidebar almost completed

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -11,7 +11,7 @@
     <body>
         <header>
             <p>
-                Trackgenix by GigaTech Software Solutions SA
+                <span>Trackgenix</span> by GigaTech Software Solutions SA
             </p>
             <nav>
                 <a href="http://www.facebook.com">
@@ -42,7 +42,7 @@
                         <li>
                             <a href="">SignUp</a>
                         </li>
-                        <li>
+                        <li class="more-padding">
                             <a href="">LogIn</a>
                         </li>
                     </ul>
@@ -50,21 +50,21 @@
             </div>
             <div>
                 <h2>Get in touch</h2>
-                <p>
+                <p class="more-padding">
                     Explanation here of the correspondant reason. We left this with a random text for the moment. This is just an example.
                      Don't take this text seriously.
                 </p>
                 <div>
-                    <p>
-                        <img src="assets/email_icon.png" alt="Email" width="25px" height="25px">
+                    <p class="line">
+                        <img src="assets/email_icon.png" alt="Email" width="15px" height="15px">
                         infotrackgenix@something.idk
                     </p>
-                    <p>
-                        <img src="assets/house_icon.png" alt="Address" width="25px" height="25px">
+                    <p class="line">
+                        <img src="assets/house_icon.png" alt="Address" width="15px" height="15px">
                         1234 Somewhere Road #8254, Nashville, TN 00000-0000
                     </p>
                     <p>
-                        <img src="assets/phone_icon.png" alt="Phone" width="25px" height="25px">
+                        <img src="assets/phone_icon.png" alt="Phone" width="15px" height="15px">
                         (000)000-0000
                     </p>
                 </div>
