BaSP-W02-2022:header corrected, some styles added to section 1, details added to all file

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -71,8 +71,8 @@
             </div>
         </aside>
         <main>
-            <section>
-                <div>
+            <section class="section-1">
+                <div class="section-1-1">
                     <h1>
                         <li>Hi, I'm Trackgenix</li>
                         <li>by GigaTech Software Solutions SA</li>
@@ -88,7 +88,7 @@
                         LEARN MORE
                     </button>
                 </div>
-                <div>
+                <div class="section-1-2">
                     <img src="assets/header.png" alt="Image" width="346px" height="301px">
                 </div>
             </section>
@@ -285,9 +285,9 @@
             </section>
             <section>
                 <div>
-                    <h2>
+                    <h3>
                         Our products
-                    </h2>
+                    </h3>
                     <ol>
                         <li>
                             <a href="">Features</a>
@@ -304,9 +304,9 @@
                     </ol>
                 </div>
                 <div>   
-                    <h2>
+                    <h3>
                         Business
-                    </h2>
+                    </h3>
                     <ol>
                         <li>
                             <a href="">About us</a>
@@ -323,9 +323,9 @@
                     </ol>
                 </div>
                 <div>
-                    <h2>
+                    <h3>
                         Support
-                    </h2>
+                    </h3>
                     <ol>
                         <li>
                             <a href="">Help</a>
