BaSP-W02-2022: styles added to section 6, section 6 html edited to add styles

--- a/Semana-02/index.html
+++ b/Semana-02/index.html
@@ -245,7 +245,7 @@
                 </div>
                 
             </section>
-            <section>
+            <section class="section-4">
                 <h2>
                     Get some info
                 </h2>
@@ -278,7 +278,7 @@
                     Send
                 </button>
             </section>
-            <section>
+            <section class="section-5">
                 <h2>
                     History of the business
                 </h2>
@@ -296,7 +296,7 @@
                 </p>
                 <img src="assets/something-else-2.png" alt="Image">
             </section>
-            <section>
+            <section class="section-6">
                 <div>
                     <h3>
                         Our products
