BaSP-W03-2022: styles added to header and footer

--- a/Semana-03/index.html
+++ b/Semana-03/index.html
@@ -100,7 +100,7 @@
                         </button>
                     </div>
                     <div class="section-1-2">
-                        <img src="assets/header.png" alt="Image" width="346px" height="301px">
+                        <img src="assets/header.png" alt="Image">
                     </div>
                 </section>
                 <section class="section-2">
